--- a/components/notoryu/notoryu.css
+++ b/components/notoryu/notoryu.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     width: 34rem;
-    height: 40rem;
+    /* height: 40rem; */
     border-radius: 0.4rem;
     overflow: hidden;
     font-family: var(--second-font);
@@ -77,6 +77,7 @@
     /* background-color: rgba(220, 20, 60, 0.349); */
     overflow: hidden;
     position: relative;
+    cursor: text;
 }
 
 
@@ -148,7 +149,7 @@
 
 .chat-emotes {
     padding: 0.4rem;
-    padding-left: 1rem;
+    padding-left: 1.4rem;
     display: flex;
     flex-direction: column;
     float: right;
